--- a/R_analysis.ipynb
+++ b/R_analysis.ipynb
@@ -21,6 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ae8a8956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On Colab\n",
+    "#install.packages(\"drc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "419e7133",
    "metadata": {
     "lines_to_next_cell": 2,
