--- a/_sources/R_analysis.ipynb
+++ b/_sources/R_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "19056eec",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# R Notebook for Imaging Stats MIC Course\n",
     "\n",
     "This notebook accompanies the [Imaging Statistics](https://ilias.unibe.ch/goto_ilias3_unibe_crs_2077609.html) course given at the University of Bern as part of the [Microscopy Imaging Center](https://www.mic.unibe.ch) trainings.\n",
     "\n",
